# Healthcare-Data-Pipeline-and-Machine-Learning-System

./: README.md  eda.ipynb  main.py  pyproject.toml  requirements.txt
api/: main.py
models/: best_model.joblib  encoders.joblib  feature_columns.joblib  scaler.joblib
src/: clean.py  database.py  retrain_dag.py  train.py
